<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/ghid_utilizare_title"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:gravity="center"
        android:text="@string/ghid_titlu"
        android:textColor="@color/red_dark"
        android:textSize="35sp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/ghid_utilizare_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:scrollbars="vertical"
            android:text="@string/text_ghid_utilizare"
            android:textSize="20sp" />

    </ScrollView>

    <Button
        android:id="@+id/returnFromGhidBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/white" />

</LinearLayout>
