...
    <string name="logout_negative_button">Anulare</string>

    <string name="stergere_title">Ştergere</string>
    <string name="stergere_message">Sunteți sigur că doriți să ştergeţi contul?</string>
    <string name="stergere_positive_button">Ştergere</string>
    <string name="stergere_negative_button">Anulare</string>
    <string name="ghid_de_utilizare">Ghid de utilizare</string>
    <string name="solicitare">Solicitare</string>
    <string name="suport">Suport</string>
    <string name="suport_help"><b>Ai nevoie de un alt fel de ajutor?</b> \n\n Sună la clinică! \n <u>0255 200 200</u> \n Luni–Vineri, orele: 09–17\n\n</string>
    <string name="email">Email</string>
    <string name="autentificare">Autentificare</string>
    <string name="resetPass"><u>Ai uitat parola? Reseteaza aici!</u></string>
...
    <string name="stergere">Ştergere cont</string>
    <string name="permisiuni">Setări permisiuni</string>
    <string name="permisiune_bluetooth">Permisiune BT</string>
    <string name="cadru_legal">Cadru legal</string>
    <string name="Titlu_setari">Setări aplicaţie</string>
    <string name="ghid_titlu">Ghid de utilizare</string>
    <string name="back">Înapoi</string>
    <string name="text_ghid_utilizare">Bine ați venit în ghidul de utilizare pentru aplicația mobilă <b>HearBit</b>. Acest ghid vă va ajuta să utilizați toate funcționalitățile aplicației noastre în mod eficient și în deplină siguranță. \n\n<b>1. Autentificare utilizatori</b> \nPentru a utiliza aplicația mobilă, trebuie să fiți autentificat. Înregistrați-vă și conectați-vă la aplicație cu ajutorul
    <string name="solicitare_titlu">Solicitare</string>
    <string name="motiv">Motivul solicitării</string>
    <string name="detalii">Detalii</string>
    <string name="send">Trimite solicitarea</string>
    <string name="cancel">Renunţare</string>
...
