<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_support"
        android:icon="@drawable/baseline_support_agent_24"
        android:title="@string/support_title"
        />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/calendar_title"
        />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home_title" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/baseline_folder_24"
        android:title="@string/dashboard_title" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/notifications_title" />

</menu>