...
        android:layout_marginBottom="16dp"
        android:background="@drawable/table_background_with_border">

        <TableRow>

            <LinearLayout
                android:id="@+id/ghidLayout"
                android:layout_width="378dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:padding="16dp">

...
